# awesome-claude-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/android-test-automation/.claude-plugin/: plugin.json
plugins/android-test-automation/agents/: android-test-automation.md
plugins/android-test-automation/skills/pytest/: SKILL.md
plugins/android-test-automation/skills/pytest/evals/: evals.json
plugins/android-test-automation/skills/pytest/references/: example_test.md
plugins/android-test-automation/skills/uiautomator2/: SKILL.md
plugins/android-test-automation/skills/uiautomator2/references/: cli-reference.md
plugins/android-test-automation/skills/uiautomator2/scripts/: u2cli.py
