[project]
name = "awesome-claude-code"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "uiautomator2>=3.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
]

lint.select = ["E", "F", "B", "W", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "C4", "T10", "EM", "ISC", "ICN"]
lint.ignore = ["ANN201", "ANN001", "EM102", "ANN202", "S314"]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

format.quote-style = "single"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
